fix spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -257,7 +257,7 @@ main a.user-name:hover {
   text-decoratoon: underline;
 }
 main table {
-  margin-bottom: 3.5em;
+  margin-bottom: 1.5em;
 }
 main .margin-bottom {
   margin-bottom: 4em;
